Customize GC behavior differently
By default, the JVM does not free allocated heap back to the OS. This
configures away from that behavior, hopefully to prevent OOM engine
errors. It replaces the existing configuration which put absolute size
limits on the heap.

See http://www.stefankrause.net/wp/?p=14 for details on the specific
options chosen. This configuration brought my test repository's memory
usage down from ~700MB to ~250MB. Its graph also shows most closely the
pattern we'd prefer: the slope of allocated heap closely matching used.